cmake_minimum_required(VERSION 3.23)
project(TrabalhoAED2)

set(CMAKE_CXX_STANDARD 14)

add_executable(TrabalhoAED2 Code/src/Country.cpp Code/Include/Country.h Code/src/Airport.cpp Code/Include/Airport.h Code/src/City.cpp Code/Include/City.h Code/src/Flight.cpp Code/Include/Flight.h Code/Include/Flight.h Code/src/Airline.cpp Code/Include/Airline.h Code/Include/Airline.h Code/src/App.cpp Code/Include/App.h Code/Include/App.h Code/src/Gestao.cpp Code/Include/Gestao.h Code/Include/Gestao.h)